--- a/package.json
+++ b/package.json
@@ -1,59 +1,80 @@
 {
-  "name": "ah-frontend-kronos",
+  "name": "react-frontend-ireporter",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "jest --coverage",
-    "start": "webpack-dev-server --open --hot --port 3000 --mode development",
-    "build": "webpack --mode production"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/andela/ah-frontend-kronos.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/andela/ah-frontend-kronos/issues"
-  },
-  "homepage": "https://github.com/andela/ah-frontend-kronos#readme",
+  "description": "IReporter enables any/every citizen to bring any form of corruption to the notice of appropriate authorities and the general public. Users can also report on things that needs government intervention",
+  "main": "server.js",
   "dependencies": {
-    "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.14.0",
+    "express": "^4.17.1",
+    "jest-css-modules-transform": "^2.2.0",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "react-redux": "^7.0.3",
+    "react-router-dom": "^4.3.1",
+    "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.13.2"
   },
   "jest": {
-    "setupFilesAfterEnv": [
-      "<rootDir>src/setupTests.js"
+    "setupFiles": [
+      "./src/setupTests.js"
     ],
-    "collectCoverageFrom": [
-      "src/**/*.{js,jsx}",
-      "!src/index.js",
-      "!src/setupTests.js"
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
     ]
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
-    "babel-eslint": "^10.0.2",
+    "babel-eslint": "^10.0.1",
+    "babel-jest": "^24.8.0",
     "babel-loader": "^8.0.6",
-    "css-loader": "^3.0.0",
+    "css-loader": "^2.1.1",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
     "enzyme-to-json": "^3.3.5",
-    "eslint": "5.15.2",
+    "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
-    "eslint-loader": "^2.1.2",
-    "eslint-plugin-import": "2.16.0",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "7.12.4",
+    "eslint-import-resolver-webpack": "^0.11.1",
+    "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.13.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^24.8.0",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
-    "webpack": "^4.35.0",
-    "webpack-cli": "^3.3.5",
-    "webpack-dev-server": "^3.7.2"
-  }
+    "stylelint": "^10.0.1",
+    "webpack": "^4.32.2",
+    "webpack-cli": "^3.3.2",
+    "webpack-dev-server": "^3.4.1"
+  },
+  "scripts": {
+    "test": "jest",
+    "dev": "webpack-dev-server --open --hot --mode development",
+    "start": "node server.js",
+    "build": "webpack --mode production",
+    "lint": "eslint",
+    "stylelint": "stylelint '**/*.scss'; exit 0",
+    "heroku-postbuild": "npm run build"
+  },
+  "engines": {
+    "npm": "6.4.1",
+    "node": "10.15.3"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Emmanuel-Dominic/react-frontend-ireporter.git"
+  },
+  "author": "Emmanuel-Dominic",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Emmanuel-Dominic/react-frontend-ireporter/issues"
+  },
+  "homepage": "https://github.com/Emmanuel-Dominic/react-frontend-ireporter#readme"
 }
