--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,41 +1,41 @@
 {
-    "env": {
+  "env": {
       "browser": true,
-      "node": true,
       "es6": true,
       "jest": true
-    },
-    "extends": [
-      "eslint:recommended",
-      "airbnb",
-      "plugin:react/recommended",
-      "plugin:import/errors",
-      "plugin:import/warnings"
-    ],
-    "parserOptions": {
+  },
+  "extends": ["eslint:recommended", "airbnb","plugin:react/recommended"],
+  "globals": {
+      "Atomics": "readonly",
+      "SharedArrayBuffer": "readonly"
+  },
+  "parserOptions": {
       "ecmaFeatures": {
-        "jsx": true
+          "jsx": true,
+          "modules": true
       },
-      "ecmaVersion": 2018,
+      "ecmaVersion": 2015,
       "sourceType": "module"
-    },
-    "rules": {
-      "no-debugger": "off",
-      "no-console": "off",
-      "no-unused-vars": "warn",
-      "react/prop-types": "warn",
+  },
+  "plugins": [
+      "react"
+  ],
+  "parser": "babel-eslint",
+  "rules": {
       "react/prefer-stateless-function": 0,
       "react/jsx-filename-extension": [
-        1,
-        {
-          "extensions": [".js", ".jsx"]
-        }
-      ]
-    },
-    "settings": {
-      "react": {
-        "version": "detect"
-      }
-    },
-    "root": true
+          1,
+          {
+              "extensions": [".js", ".jsx"]
+          }
+      ],
+      "comma-dangle": 0,
+      "react/jsx-uses-vars": 1,
+      "react/display-name": 1,
+      "no-unused-vars": "warn",
+      "no-console": 1,
+      "no-unexpected-multiline": "warn",
+      "import/no-unresolved": false,
+      "camelcase": 0
   }
+}
