--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "IReporter enables any/every citizen to bring any form of corruption to the notice of appropriate authorities and the general public. Users can also report on things that needs government intervention",
   "main": "server.js",
   "dependencies": {
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.13.2",
     "express": "^4.17.1",
     "jest-css-modules-transform": "^2.2.0",
     "prop-types": "^15.7.2",
@@ -11,11 +13,10 @@
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.3",
     "react-router-dom": "^4.3.1",
+    "react-toastify": "^5.3.2",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.8",
-    "redux-thunk": "^2.3.0",
-    "enzyme": "^3.9.0",
-    "enzyme-adapter-react-16": "^1.13.2"
+    "redux-thunk": "^2.3.0"
   },
   "jest": {
     "setupFiles": [
@@ -23,7 +24,8 @@
     ],
     "snapshotSerializers": [
       "enzyme-to-json/serializer"
-    ]
+    ],
+    "serve": "^11.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
@@ -46,6 +48,7 @@
     "html-webpack-plugin": "^3.2.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.8.0",
+    "jest-css-modules-transform": "^2.2.0",
     "node-sass": "^4.12.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
