--- a/package.json
+++ b/package.json
@@ -4,18 +4,21 @@
   "description": "IReporter enables any/every citizen to bring any form of corruption to the notice of appropriate authorities and the general public. Users can also report on things that needs government intervention",
   "main": "server.js",
   "dependencies": {
+    "axios": "^0.19.0",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.13.2",
     "express": "^4.17.1",
     "jest-css-modules-transform": "^2.2.0",
+    "moxios": "^0.4.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.3",
     "react-router-dom": "^4.3.1",
+    "react-toastify": "^5.3.2",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.8",
-    "redux-thunk": "^2.3.0",
-    "enzyme": "^3.9.0",
-    "enzyme-adapter-react-16": "^1.13.2"
+    "redux-thunk": "^2.3.0"
   },
   "jest": {
     "setupFiles": [
