--- a/.travis.yml
+++ b/.travis.yml
@@ -17,3 +17,5 @@ script:
   - npx jest -u --coverage
 after_script:
   - ./cc-test-report after-build --exit-code $TRAVIS_TEST_RESULT
+ after_success:
+  - coveralls
