--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ before_script:
   - ./cc-test-reporter before-build
 script:
   - npm install
+  - npm install coveralls
   - npx jest -u --coverage
 after_script:
   - ./cc-test-report after-build --exit-code $TRAVIS_TEST_RESULT
